Agora csrf token funciona para endpoint login, estava enviando UUID e comparando com XOred

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,8 +27,8 @@ server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
 
 # Restringe o envio do cookie apenas para requisições do mesmo site (protege contra CSRF via navegação cruzada)
-server.servlet.session.cookie.same-site=strict
-
+#server.servlet.session.cookie.same-site=strict
+server.servlet.session.cookie.same-site=lax
 # Habilita o HTTPS no servidor embutido
 server.port=8443
 server.ssl.enabled=true
@@ -39,6 +39,13 @@ server.ssl.key-store-password=ranger19
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=localhost
 server.ssl.key-password=ranger19
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.edu.entra21.fiberguardian=INFO
+
+logging.level.org.springframework.security.web.csrf=TRACE
+logging.level.org.springframework.security.web.csrf.CsrfFilter=TRACE
 
 # gera ao keystore para comunicao HTTPS 
 # keytool -genkeypair -alias localhost -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore localhost.p12 -validity 365 -dname "CN=localhost, OU=Dev, O=MyApp, L=SaoPaulo, ST=SP, C=BR" -storepass ranger19 -keypass ranger19
